# one-to-many-gan

./: .gitignore  config.toml  infinite_run.sh  pyproject.toml  run_detached.sh  train.py  training_run.py
src/: blocks.py  config.py  evaluation.py  layers.py  loss.py  models.py  training.py  utils.py
src/core/: evaluation.py  training.py
src/data/: config.py
src/model/: blocks.py  builder.py  layers.py
xogan/: blocks.py  data.py  layers.py  loss.py  santa.py  siamese.py  stylegan2.py  utils.py
